# 2DPhysEngine

./: .gitignore  CMakeLists.txt  build_instructions.md
PhysicsDemo/: CMakeLists.txt
PhysicsDemo/include/: body_wrapper.hpp  button.hpp  circle_wrapper.hpp  demo_menu.hpp  physics_demo_runner.hpp  polygon_wrapper.hpp  rectangle_wrapper.hpp  vector_adapter.hpp
PhysicsDemo/sources/: body_wrapper.cpp  button.cpp  circle_wrapper.cpp  demo_menu.cpp  main.cpp  physics_demo_runner.cpp  polygon_wrapper.cpp  rectangle_wrapper.cpp
src/: CMakeLists.txt  README.md
src/include/: 2DPhysicsEngine.hpp  2dMath.hpp  body.hpp  circle.hpp  collision_grid.hpp  collision_resolver.hpp  collisions.hpp  logger.hpp  manifold.hpp  polygon.hpp  rectangle.hpp  rectangle_capsule.hpp  shape.hpp  world.hpp
src/sources/: 2dMath.cpp  body.cpp  circle.cpp  collision_grid.cpp  collision_resolver.cpp  logger.cpp  polygon.cpp  rectangle.cpp  shape.cpp  world.cpp
